force-app/main/default/objects/Case/fields/Case_field__c.field-meta.xml
<CustomField>
    <fullName>Case_field__c</fullName>
    <formula>IF( 
ISPICKVAL(Type , &quot;Mechanical&quot;),
 &quot;Red&quot;,  
IF(ISPICKVAL(Type , &quot;Electronic&quot;), 
&quot;Green&quot;, &quot;yellow&quot;) )</formula>
    <label>Case field</label>
    <type>Text</type>
</CustomField>