force-app/main/default/objects/Case/fields/Supplied_Email__c.field-meta.xml
<CustomField>
    <fullName>Supplied_Email__c</fullName>
    <label>Supplied Email</label>
    <type>Email</type>
</CustomField>