force-app/main/default/objects/Case/recordTypes/Customer_Complaint.recordType-meta.xml
<RecordType>
    <fullName>Customer_Complaint</fullName>
    <active>true</active>
    <businessProcess>Customer Complaint</businessProcess>
    <label>Customer Complaint</label>
</RecordType>