force-app/main/default/objects/Case/recordTypes/Technicall_Support.recordType-meta.xml
<RecordType>
    <fullName>Technicall_Support</fullName>
    <active>true</active>
    <businessProcess>Technical Support</businessProcess>
    <label>Technicall Support</label>
</RecordType>