force-app/main/default/objects/Case/listViews/deepak_Case.listView-meta.xml
<ListView>
    <fullName>deepak_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>deepak</label>
    <queue>deepak</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>