force-app/main/default/objects/Case/listViews/kumar_Case.listView-meta.xml
<ListView>
    <fullName>kumar_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>kumar</label>
    <queue>kumar</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>