force-app/main/default/objects/Case/listViews/tharun_Case.listView-meta.xml
<ListView>
    <fullName>tharun_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>tharun</label>
    <queue>tharun</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>